# lab4sp

./: CMakeLists.txt  Makefile  README.md
src/: calculator.cpp  calculator.h  main.cpp
